<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_bg"
    android:orientation="horizontal"
    android:padding="12dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cart_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cart_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/_0_00"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrease_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/Subtraction"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cart_item_quantity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/increase_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/addition"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/gray"
        android:text="@string/remove"
        android:textColor="@color/white" />
</LinearLayout>